--- a/k8s/setupCluster/templates/template_pod_zookeeper.yaml
+++ b/k8s/setupCluster/templates/template_pod_zookeeper.yaml
@@ -7,11 +7,14 @@ spec:
     storage: 20Gi
   accessModes:
     - ReadWriteMany
-  flexVolume:
-    driver: "alicloud/disk"
-    fsType: "ext4"
-    options:
-      volumeId: "$logVolume"
+#  flexVolume:
+#    driver: "alicloud/disk"
+#    fsType: "ext4"
+#    options:
+#      volumeId: "$logVolume"
+  nfs:
+    path: /opt/share/$volumeId
+    server: 172.18.158.121 #change to your nfs server ip here
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -22,11 +25,14 @@ spec:
     storage: 20Gi
   accessModes:
     - ReadWriteMany
-  flexVolume:
-    driver: "alicloud/disk"
-    fsType: "ext4"
-    options:
-      volumeId: "$dataVolume"
+#  flexVolume:
+#    driver: "alicloud/disk"
+#    fsType: "ext4"
+#    options:
+#      volumeId: "$dataVolume"
+  nfs:
+    path: /opt/share/$volumeId
+    server: 172.18.158.121 #change to your nfs server ip here
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -82,7 +88,7 @@ spec:
       terminationGracePeriodSeconds: 120
       containers:
         - name: $zkPodName
-          image: hyperledger/fabric-zookeeper:x86_64-1.1.0-preview
+          image: hyperledger/fabric-zookeeper:x86_64-1.0.6
           env:
             - name: ZOO_MY_ID
               value: "$seq"
